# chamber-gui

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
sample_data/: run_data.csv
src/chamber_gui/: __init__.py  app.py  data_loader.py  figures.py  hpbw.py  models.py  replay_csv.py  theme.py
src/chamber_gui/assets/: experiment_cut_drag.js  modal_drag.js
tests/: conftest.py  test_app.py  test_app_callbacks.py  test_data_loader.py  test_e2e_modal_and_layout.py  test_entrypoint.py  test_figures.py  test_hpbw.py  test_models.py  test_replay_csv.py  test_theme.py
